# rodep-roborescue

./: .clang-format  .dockerignore  .gitignore  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: docker-actions.yml  docker-image.yml  docker-image.yml.bak
.github/workflows/ISSUE_TEMPLATE/: feature_request.md
docs/datasheets/: README.md
main_ws/install/: local_setup.sh
main_ws/launch/: launch.py
main_ws/log/: latest_build
main_ws/src/crawler_driver/: CMakeLists.txt  package.xml
main_ws/src/flipper_driver/: package.xml
main_ws/src/my_rqt_plugin/: CMakeLists.txt  plugin.xml
main_ws/src/my_rqt_plugin/include/my_rqt_plugin/: my_plugin.hpp
main_ws/src/my_rqt_plugin/src/: my_plugin.cpp
main_ws/src/operator/: CMakeLists.txt
resources/: Dockerfile  Dockerfile.bak  fish.sh
resources/hooks/commit/: prepare-commit-msg
resources/hooks/format/: README.md  pre-commit
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/launch/: joy_system_launch.py
ros2_ws/log/: latest_build
ros2_ws/src/joy_controller/: CMakeLists.txt
yano_ws/custom_interfaces/: CMakeLists.txt
yano_ws/custom_interfaces/msg/: DriverVelocity.msg
yano_ws/install/: local_setup.sh  setup.sh
yano_ws/launch/: launch.py
yano_ws/log/: latest_build  latest_list  latest_test
yano_ws/src/driver/: CMakeLists.txt  README.md  package.xml
yano_ws/src/flipper/: CMakeLists.txt
yano_ws/src/flipper_driver/: CMakeLists.txt
yano_ws/src/operator/: CMakeLists.txt  README.md
yano_ws/src/usb_camera/: CMakeLists.txt
(+366 files in other folders)
